# vtuber-scraper

./: .gitignore  Pipfile  README.md  pyproject.toml
scraper/: .gitignore  README.md
scraper/vpost/: scrape_v_info.py  scrape_v_list.py
scraper/vpost/lib/: scraper.py  vtuber_data.py
src/: build_dataset.py  download_youtube_videos.py  scrape_vpost_detail.py  scrape_vpost_list.py  scrape_youtube_channel.py  scrape_youtube_search.py
src/dataset_for_annotator/: builder_load.py  data_collector.py  data_filter.py  data_types.py  dataset_builder.py
src/dataset_for_annotator/collector/: __init__.py  twitter.py  youtube.py
src/dataset_for_annotator/data_types/: common.py  dataset.py  merged.py
src/dataset_for_ml_model/: VideoDownloader.py
src/utils/: file.py  logger.py
src/vpost/: scraper.py  selenium_test.py  vtuber_data.py
src/youtube/: scraper.py  youtube_data.py
test/: test_dataset_data_types.py
